--- a/neurips2020.bib
+++ b/neurips2020.bib
@@ -410,3 +410,11 @@
   year={2020},
   volume={abs/2002.05709}
 }
+
+@article{Efron1994Bootstrap,
+  title={An introduction to the bootstrap},
+  author={Bradley Efron and Robert J. Tibshirani},
+  journal={CRC press},
+  year={1994},
+  volume={}
+}
