--- a/neurips2020.bib
+++ b/neurips2020.bib
@@ -418,3 +418,44 @@
   year={1994},
   volume={}
 }
+
+@article{Gardner2006Cyclostationarity,
+  title={Cyclostationarity: Half a century of research},
+  author={William A. Gardner and Antonio Napolitano and Luigi Paura},
+  journal={Signal processing},
+  year={2006},
+  volume={86.4},
+  pages={639--697}
+}
+
+@article{Yosinski2014HowTA,
+  title={How transferable are features in deep neural networks?},
+  author={Jason Yosinski and Jeff Clune and Yoshua Bengio and Hod Lipson},
+  journal={ArXiv},
+  year={2014},
+  volume={abs/1411.1792}
+}
+
+@article{He2019MomentumCF,
+  title={Momentum Contrast for Unsupervised Visual Representation Learning},
+  author={Kaiming He and Haoqi Fan and Yuxin Wu and Saining Xie and Ross B. Girshick},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1911.05722}
+}
+
+@inproceedings{Tan2018ASO,
+  title={A Survey on Deep Transfer Learning},
+  author={Chuanqi Tan and Fuchun Sun and Tao Kong and Wenchang Zhang and Chao Yang and Chunfang Liu},
+  booktitle={ICANN},
+  year={2018}
+}
+
+@article{Pan2010ASO,
+  title={A Survey on Transfer Learning},
+  author={Sinno Jialin Pan and Qiang Yang},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  year={2010},
+  volume={22},
+  pages={1345-1359}
+}
