--- a/neurips2020.tex
+++ b/neurips2020.tex
@@ -19,7 +19,7 @@
 \title{MeLES: Metric learning for event sequences with self-supervision}
 
 \author{
-Dmitrii Babaev
+Dmitrii Babaev \\
 % dmitri.babaev@gmail.com
 Sberbank AI Lab
 \And
