--- a/neurips2020-supplimentary.tex
+++ b/neurips2020-supplimentary.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
-\usepackage[preprint, nonatbib]{neurips_2020}
+%\usepackage[preprint, nonatbib]{neurips_2020}
+\usepackage[nonatbib]{neurips_2020}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
