Update on Overleaf.

--- a/neurips2020.tex
+++ b/neurips2020.tex
@@ -190,7 +190,7 @@ Several approaches can be used to encode a sequence~\cite{Cho2014LearningPR, Vas
 \subsection{Datasets} \label{sec-datasets}
 
 In our research we chose several publicly available datasets from data science competitions by means of sufficient amount of discrete events per user, hence, suitable for our method to obtain meaningful representations.
-\newline \textbf{Age group prediction competition}\footnote{https://onti.ai-academy.ru/competition} - the dataset of 44M anonymized credit card transactions representing 50k persons was used to predict the age group of a person. Each transaction includes date, type and the amount being charged.
+\newline \textbf{Age group prediction competition}\footnote{https://ods.ai/competitions/sberbank-sirius-lesson} - the dataset of 44M anonymized credit card transactions representing 50k persons was used to predict the age group of a person. Each transaction includes date, type and the amount being charged.
 \newline \textbf{Gender prediction competition}\footnote{https://www.kaggle.com/c/python-and-analyze-data-final-project/} - the dataset of 6,8M anonymized card transactions representing 15K clients was used to predict a gender. Each transaction is characterized by date, type, amount and Merchant Category Code.
 \newline \textbf{Assessment prediction competition}\footnote{https://www.kaggle.com/c/data-science-bowl-2019} - the task is to predict the in-game assessment results based on the history of children gameplay data. The dataset consists of 12M gameplay events representing 18k children. Each gameplay event is characterized by timestamp, event code, incremental counter of events within a game session, time since the start of the game session, etc.
 \newline \textbf{Retail purchase history age group prediction}\footnote{https://ods.ai/competitions/x5-retailhero-uplift-modeling} - the task is to predict the age group of a client based on it retail purchase history. The dataset consists of 45,8M retail purchases representing 400k clients. Each purchase is characterized by time, product level, segment, amount, value, loyalty program points received.
