Update on Overleaf.

--- a/neurips2020-supplimentary.tex
+++ b/neurips2020-supplimentary.tex
@@ -198,7 +198,7 @@ For all methods, random search on 5-fold cross-validation over the train set is 
 \caption{Hyper-parameters for MeLES training}
 \begin{tabular}{lllllll}
 \toprule
-\textbf{Dataset} & \makecell[l]{\textbf{Learning} \\ \textbf{rate}} & \makecell[l]{\textbf{N samples} \\ \textbf{in batch}} & \textbf{N epochs} & \makecell[l]{\textbf{N} \\ \textbf{sub-samples}}} & \makecell[l]{\textbf{Min seq} \\ \textbf{length}} & \makecell[l]{\textbf{Max seq} \\ \textbf{length}} \\
+\textbf{Dataset} & \makecell[l]{\textbf{Learning} \\ \textbf{rate}} & \makecell[l]{\textbf{N samples} \\ \textbf{in batch}} & \textbf{N epochs} & \makecell[l]{\textbf{N} \\ \textbf{sub-samples}} & \makecell[l]{\textbf{Min seq} \\ \textbf{length}} & \makecell[l]{\textbf{Max seq} \\ \textbf{length}} \\
 \midrule
 \textbf{Age group} & 0.002 & 64 & 100 & 5 & 25 & 100 \\
 \textbf{Gender} & 0.002 & 128 & 150 & 5 & 25 & 100 \\
