--- a/iclr2021.bib
+++ b/iclr2021.bib
@@ -459,3 +459,107 @@
   volume={22},
   pages={1345-1359}
 }
+
+@article{Tobback2019RetailCS,
+  title={Retail credit scoring using fine‐grained payment data},
+  author={Ellen Tobback and David Martens},
+  journal={Journal of The Royal Statistical Society Series A-statistics in Society},
+  year={2019},
+  volume={182},
+  pages={1227-1246}
+}
+
+@article{chatterjee2003modeling,
+  title={Modeling the clickstream: Implications for web-based advertising efforts},
+  author={Chatterjee, Patrali and Hoffman, Donna L and Novak, Thomas P},
+  journal={Marketing Science},
+  volume={22},
+  number={4},
+  pages={520--541},
+  year={2003},
+  publisher={INFORMS}
+}
+
+@article{sinha2014your,
+  title={Your click decides your fate: Inferring information processing and attrition behavior from mooc video clickstream interactions},
+  author={Sinha, Tanmay and Jermann, Patrick and Li, Nan and Dillenbourg, Pierre},
+  journal={arXiv preprint arXiv:1407.7131},
+  year={2014}
+}
+
+@article{Falcon2020AFF,
+  title={A Framework For Contrastive Self-Supervised Learning And Designing A New Approach},
+  author={W. Falcon and Kyunghyun Cho},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2009.00104}
+}
+
+@inproceedings{Dosovitskiy2014DiscriminativeUF,
+  title={Discriminative Unsupervised Feature Learning with Convolutional Neural Networks},
+  author={A. Dosovitskiy and Jost Tobias Springenberg and Martin A. Riedmiller and T. Brox},
+  booktitle={NIPS},
+  year={2014}
+}
+
+@article{Bachman2019LearningRB,
+  title={Learning Representations by Maximizing Mutual Information Across Views},
+  author={Philip Bachman and R. Devon Hjelm and William Buchwalter},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1906.00910}
+}
+
+@article{Zhou2020ContrastiveLF,
+  title={Contrastive Learning for Debiased Candidate Generation in Large-Scale Recommender Systems},
+  author={Chang Zhou and Jianxin Ma and J. Zhang and Jingren Zhou and Hongxia Yang},
+  journal={ArXiv},
+  year={2020}
+}
+
+@article{Ma2020DisentangledSI,
+  title={Disentangled Self-Supervision in Sequential Recommenders},
+  author={Jianxin Ma and C. Zhou and Hongxia Yang and Peng Cui and Xin Wang and Wenwu Zhu},
+  journal={Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  year={2020}
+}
+
+@article{Yao2020SelfsupervisedLF,
+  title={Self-supervised Learning for Deep Models in Recommendations},
+  author={Tiansheng Yao and Xinyang Yi and D. Cheng and F. Yu and Aditya Menon and L. Hong and Ed Huai-hsin Chi and Steve Tjoa and J. Kang and Evan Ettinger},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2007.12865}
+}
+
+@article{Zhou2020S3RecSL,
+  title={S\^3-Rec: Self-Supervised Learning for Sequential Recommendation with Mutual Information Maximization},
+  author={Kun Zhou and Haibo Wang and Wayne Xin Zhao and Yutao Zhu and Sirui Wang and Fuzheng Zhang and Zhong-yuan Wang and Jirong Wen},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2008.07873}
+}
+
+@article{Lan2020ALBERTAL,
+  title={ALBERT: A Lite BERT for Self-supervised Learning of Language Representations},
+  author={Zhenzhong Lan and Mingda Chen and Sebastian Goodman and Kevin Gimpel and Piyush Sharma and Radu Soricut},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/1909.11942}
+}
+
+@article{Clark2020ELECTRAPT,
+  title={ELECTRA: Pre-training Text Encoders as Discriminators Rather Than Generators},
+  author={K. Clark and Minh-Thang Luong and Quoc V. Le and Christopher D. Manning},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2003.10555}
+}
+
+@inproceedings{Saunshi2019ICML,
+  title={A Theoretical Analysis of Contrastive Unsupervised Representation Learning},
+  author={Nikunj Saunshi and Orestis Plevrakis and Sanjeev Arora and Mikhail Khodak and Hrishikesh Khandeparkar},
+  booktitle={In International Conference on Machine Learning},
+  year={2019},
+  pages={5628--5637}
+}
