Update on Overleaf.

--- a/TODO.tex
+++ b/TODO.tex
@@ -38,13 +38,19 @@
 
 \section{TODO}
 
-\item Глеб: Добавить в RW статьи с гарантиями для contrastive learning, где используются размеченные пары: "A Theoretical Analysis of Contrastive Unsupervised Representation Learning" и другие, которые на нее ссылаются.
+\item Перечитать Appendix: (1) исправить формулы в доказетельстве, которые там поломались при смене формата, (2) переписать лучше описание тех вещей, которые уже улучшили в основном тексте.
 
-\item Написать про альтернативные методы аугментации в других обоастях и почемы мы выбрали семплинг.
+\item Почитать, что сделали здесь с точки зрения теории: "Understanding Contrastive Representation Learning through Alignment and Uniformity on the Hypersphere", "PAC-Bayesian Contrastive Unsupervised Representation Learning". На последнюю из двух работ сослаться?
+
+\item Статус:  пока решил сослаться в секции 3. Глеб: Добавить в RW статьи с гарантиями для contrastive learning, где используются размеченные пары: "A Theoretical Analysis of Contrastive Unsupervised Representation Learning" и другие, которые на нее ссылаются.
+
 
 \item проверить допущение про цикличность что оно применимо к датасетам / стационарность случайного процесса, проверить является ли мартингалом или нет, транзакции это семплы случайного процесса/ Ахмед Умяров  acm transaction on the web statistical test (это что то сложное)
 
 \section{DONE}
+
+\item (Глеб) Написать про альтернативные методы аугментации в других обоастях и почемы мы выбрали семплинг.
+
 
 \item проверить допущение про power law (график есть, нужно место, откуда на него сослаться)
 
