Update on Overleaf.

--- a/iclr2021.bib
+++ b/iclr2021.bib
@@ -563,3 +563,28 @@
   year={2019},
   pages={5628--5637}
 }
+
+@article{Grill2020BootstrapYO,
+  title={Bootstrap Your Own Latent: A New Approach to Self-Supervised Learning},
+  author={Jean-Bastien Grill and Florian Strub and Florent Altch{\'e} and C. Tallec and Pierre H. Richemond and Elena Buchatskaya and C. Doersch and Bernardo Avila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and B. Piot and K. Kavukcuoglu and R{\'e}mi Munos and Michal Valko},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2006.07733}
+}
+
+More articles to review:
+
+@article{Pavlovski2020TimeAwareUE,
+  title={Time-Aware User Embeddings as a Service},
+  author={M. Pavlovski and Jelena Gligorijevic and Ivan Stojkovic and S. Agrawal and Shabhareesh Komirishetty and Djordje Gligorijevic and Narayan Bhamidipati and Z. Obradovic},
+  journal={Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery & Data Mining},
+  year={2020}
+}
+
+@article{Ermolov2020WhiteningFS,
+  title={Whitening for Self-Supervised Representation Learning},
+  author={A. Ermolov and Aliaksandr Siarohin and E. Sangineto and N. Sebe},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2007.06346}
+}
